<resources>
<string name="abc_action_bar_home_description">Navigate home</string>
<string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
<string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
<string name="abc_action_bar_up_description">Navigate up</string>
<string name="abc_action_menu_overflow_description">More options</string>
<string name="abc_action_mode_done">Done</string>
<string name="abc_activity_chooser_view_see_all">See all</string>
<string name="abc_activitychooserview_choose_application">Choose an app</string>
<string name="abc_capital_off">OFF</string>
<string name="abc_capital_on">ON</string>
<string name="abc_search_hint">Search&#8230;</string>
<string name="abc_searchview_description_clear">Clear query</string>
<string name="abc_searchview_description_query">Search query</string>
<string name="abc_searchview_description_search">Search</string>
<string name="abc_searchview_description_submit">Submit query</string>
<string name="abc_searchview_description_voice">Voice search</string>
<string name="abc_shareactionprovider_share_with">Share with</string>
<string name="abc_shareactionprovider_share_with_application">Share with %s</string>
<string name="abc_toolbar_collapse_description">Collapse</string>
<string name="common_google_play_services_enable_button">Enable</string>
<string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
<string name="common_google_play_services_enable_title">Enable Google Play services</string>
<string name="common_google_play_services_install_button">Install</string>
<string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
<string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
<string name="common_google_play_services_install_title">Get Google Play services</string>
<string name="common_google_play_services_notification_ticker">Google Play services error</string>
<string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
<string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
<string name="common_google_play_services_unsupported_title">Google Play services</string>
<string name="common_google_play_services_update_button">Update</string>
<string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
<string name="common_google_play_services_update_title">Update Google Play services</string>
<string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
<string name="common_google_play_services_updating_title">Google Play services are updating</string>
<string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
<string name="common_open_on_phone">Open on phone</string>
<string name="common_signin_button_text">Sign in</string>
<string name="common_signin_button_text_long">Sign in with Google</string>
<string name="status_bar_notification_info_overflow">999+</string>
<string name="ALongTimeAgo">last seen a long time ago</string>
<string name="AbortPassword">Abort two-step verification setup</string>
<string name="AccessError">Access error</string>
<string name="AccurateTo">Accurate to %1$s</string>
<string name="ActionAddUser">un1 added un2</string>
<string name="ActionAddUserSelf">un1 returned to the group</string>
<string name="ActionAddUserSelfMega">un1 joined the group</string>
<string name="ActionAddUserSelfYou">You returned to the group</string>
<string name="ActionAddUserYou">un1 added you</string>
<string name="ActionChangedPhoto">un1 changed the group photo</string>
<string name="ActionChangedTitle">un1 changed the group name to un2</string>
<string name="ActionChannelChangedPhoto">Channel photo changed</string>
<string name="ActionChannelChangedTitle">Channel name changed to un2</string>
<string name="ActionChannelRemovedPhoto">Channel photo removed</string>
<string name="ActionCreateChannel">Channel created</string>
<string name="ActionCreateGroup">un1 created the group</string>
<string name="ActionCreateMega">Group created</string>
<string name="ActionInviteUser">un1 joined the group via invite link</string>
<string name="ActionInviteYou">You joined the group via invite link</string>
<string name="ActionKickUser">un1 removed un2</string>
<string name="ActionKickUserYou">un1 removed you</string>
<string name="ActionLeftUser">un1 left the group</string>
<string name="ActionMigrateFromGroup">This group was upgraded to a supergroup</string>
<string name="ActionMigrateFromGroupNotify">%1$s was upgraded to a supergroup</string>
<string name="ActionPinnedContact">un1 pinned a contact</string>
<string name="ActionPinnedFile">un1 pinned a file</string>
<string name="ActionPinnedGeo">un1 pinned a map</string>
<string name="ActionPinnedGif">un1 pinned a GIF</string>
<string name="ActionPinnedMusic">un1 pinned a track</string>
<string name="ActionPinnedNoText">un1 pinned a message</string>
<string name="ActionPinnedPhoto">un1 pinned a photo</string>
<string name="ActionPinnedSticker">un1 pinned a sticker</string>
<string name="ActionPinnedText">un1 pinned \"%1$s\"</string>
<string name="ActionPinnedVideo">un1 pinned a video</string>
<string name="ActionPinnedVoice">un1 pinned a voice message</string>
<string name="ActionRemovedPhoto">un1 removed the group photo</string>
<string name="ActionTakeScreenshoot">un1 took a screenshot!</string>
<string name="ActionTakeScreenshootYou">You took a screenshot!</string>
<string name="ActionYouAddUser">You added un2</string>
<string name="ActionYouChangedPhoto">You changed the group photo</string>
<string name="ActionYouChangedTitle">You changed the group name to un2</string>
<string name="ActionYouCreateGroup">You created the group</string>
<string name="ActionYouKickUser">You removed un2</string>
<string name="ActionYouLeftUser">You left the group</string>
<string name="ActionYouRemovedPhoto">You removed the group photo</string>
<string name="Add">Add</string>
<string name="AddCaption">Add a caption...</string>
<string name="AddContact">Add</string>
<string name="AddContactChat">ADD CONTACT</string>
<string name="AddContactTitle">Add contact</string>
<string name="AddExceptions">Add exceptions</string>
<string name="AddMember">Add member</string>
<string name="AddMutual">Add contacts to your channel</string>
<string name="AddRecipient">Add recipient</string>
<string name="AddShortcut">Add shortcut</string>
<string name="AddStickers">Add Stickers</string>
<string name="AddStickersInstalled">New stickers added</string>
<string name="AddStickersNotFound">Stickers not found</string>
<string name="AddToContacts">Add to contacts</string>
<string name="AddToFavorites">Add to Favourites</string>
<string name="AddToStickers">Add to Stickers</string>
<string name="AddToTheGroup">Add %1$s to the group?</string>
<string name="AddToTheGroupForwardCount">Number of last messages to forward:</string>
<string name="AddToTheGroupTitle">Add %1$s to the chat %2$s?</string>
<string name="Alert">Alert</string>
<string name="AllPhotos">All Photos</string>
<string name="AllVideo">All Videos</string>
<string name="AllowReadCall">Please allow Telegram to receive calls so that we can automatically enter your code for you.</string>
<string name="AllowReadCallAndSms">Please allow Telegram to receive calls and SMS so that we can automatically enter your code for you.</string>
<string name="AllowReadSms">Please allow Telegram to receive SMS so that we can automatically enter your code for you.</string>
<string name="AlwaysAllow">Always Allow</string>
<string name="AlwaysAllowPlaceholder">Always allow...</string>
<string name="AlwaysShareWith">Always Share With</string>
<string name="AlwaysShareWithPlaceholder">Always share with users...</string>
<string name="AlwaysShareWithTitle">Always Share</string>
<string name="AlwaysShowPopup">Always show popup</string>
<string name="AndMoreTyping_few">and %1$d more are typing</string>
<string name="AndMoreTyping_many">and %1$d more are typing</string>
<string name="AndMoreTyping_one">and %1$d more are typing</string>
<string name="AndMoreTyping_other">and %1$d more are typing</string>
<string name="AndMoreTyping_two">and %1$d more are typing</string>
<string name="AndMoreTyping_zero">and %1$d more are typing</string>
<string name="AndOther_few">and %1$d others</string>
<string name="AndOther_many">and %1$d others</string>
<string name="AndOther_one">and %1$d other</string>
<string name="AndOther_other">and %1$d others</string>
<string name="AndOther_two">and %1$d others</string>
<string name="AndOther_zero">and %1$d others</string>
<string name="AnsweringmachineDefaulttext">Now I can not answer messages I am a telegram clerk</string>
<string name="AppName">&#1608;&#1575;&#1608;&#1711;&#1585;&#1575;&#1605;</string>
<string name="AppNameBeta">Art Telegram Beta</string>
<string name="ApplyLocalizationFile">Apply localization file</string>
<string name="AutomaticallyAdd">Automatically add the channel</string>
<string name="AutomaticallyAddDes">To get the latest news and features new art telegram we automatically add you to channel , you can disable it</string>
<string name="CopyRightMe">mansor All rights reserved.</string>
<string name="MeEmaile">email: borhanrashidi1@gmail.com</string>
<string name="MeSite">Web: www.paie.com</string>
<string name="NewPassword">New Password</string>
<string name="OK">OK</string>
<string name="PremiumText">To use this special feature please upgrade to premium version</string>
<string name="PremiumVersion">Premium Version</string>
<string name="ProgramerDesigner">Program designer: mansor rashidi</string>
<string name="Settingapersonalpassword">Setting a personal password</string>
<string name="ShamsiClender">Shamsi Calendar</string>
<string name="ShamsiClenderhelp">Using this feature solar calendar rather than the Gregorian calendar will see the message.</string>
<string name="Typeinhiding">Type in hiding</string>
<string name="Typeinhidinghelp">With this feature, users are not see typing you state.</string>
<string name="VersionMeCoustom">Version : 1.0</string>
<string name="activatean">Activate</string>
<string name="repeatpassword">Repeat password</string>
<string name="toshop">Go to shop</string>
<string name="TaidSticker">Confirm Sticker</string>
<string name="TaidText">before sending voice it to listen to and submit.</string>
<string name="TaidTextSticker">Before sending stickers to approve and submit.</string>
<string name="TaidVoice">Confirm Voice</string>
<string name="prefs_application">Application settings</string>
<string name="prefs_autostart_summary">Should the clipboard monitoring service be started when phone boots.</string>
<string name="prefs_autostart_title">Start on boot</string>
<string name="prefs_history_summary">The number of clipboard items to store.</string>
<string name="prefs_history_title">History level</string>
<string name="prefs_monitoring_summary">Enable clipboard polling service.</string>
<string name="prefs_monitoring_title">Clipboard monitoring</string>
<string name="prefs_notification_summary">When should the notification icon be shown.</string>
<string name="prefs_notification_title">Notifications</string>
<string name="prefs_polling_interval_summary">How often should we poll for clipboard changes.</string>
<string name="prefs_polling_interval_title">Polling interval</string>
<string name="prefs_service">Service settings</string>
</resources>