<?xml version='1.0' encoding='utf-8' ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical" android:id="@id/linearLayout40" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
		<TextView android:textSize="14.0dip" android:textColor="#ff414141" android:layout_gravity="center_horizontal" android:id="@id/textView17" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/VersionMeCoustom" />
		<TextView android:textSize="14.0dip" android:textColor="#ff414141" android:layout_gravity="center_horizontal" android:id="@id/textView19" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ProgramerDesigner" />
		<TextView android:textSize="14.0dip" android:textColor="#ff414141" android:layout_gravity="center_horizontal" android:id="@id/textView20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/CopyRightMe" />
		<TextView android:textSize="14.0dip" android:textColor="#ff414141" android:textColorLink="#ff5b80df" android:autoLink="web" android:layout_gravity="center_horizontal" android:id="@id/textView22" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/MeSite" />
		<TextView android:textSize="14.0dip" android:textColor="#ff414141" android:textColorLink="#ff5b80df" android:autoLink="email" android:layout_gravity="center_horizontal" android:id="@id/textView21" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/MeEmaile" />
		<TextView android:textSize="14.0dip" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:id="@id/textView23" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="2013-2016 ©" />
	</LinearLayout>
	<ImageView android:id="@id/imageView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:src="@drawable/about_icon" android:layout_centerHorizontal="true" />
</RelativeLayout>
