<?xml version='1.0' encoding='utf-8' ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="#ffececec" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
		<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
			<LinearLayout android:orientation="vertical" android:background="@drawable/ly_bord_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
				<RelativeLayout android:background="#ffedebec" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="20.0dip">
					<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff454344" android:id="@id/text_02a" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/TaidText" android:layout_below="@id/text_01a" android:layout_alignParentRight="true" />
					<CheckBox android:textColor="#ff454545" android:layout_gravity="right" android:id="@id/check_01a" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/activatean" android:layout_below="@id/text_02a" android:layout_alignRight="@id/text_02a" android:layout_alignParentLeft="true" />
					<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#fff16136" android:id="@id/text_01a" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/TaidVoice" android:layout_above="@id/textView2" android:layout_alignParentRight="true" />
				</RelativeLayout>
				<RelativeLayout android:background="#ffedebec" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="20.0dip">
					<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff454344" android:id="@id/text_02b" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/TaidTextSticker" android:layout_below="@id/text_01b" android:layout_alignParentRight="true" />
					<CheckBox android:textColor="#ff454545" android:layout_gravity="right" android:id="@id/check_01b" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/activatean" android:layout_below="@id/text_02b" android:layout_alignRight="@id/text_02b" android:layout_alignParentLeft="true" />
					<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#fff16136" android:id="@id/text_01b" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/TaidSticker" android:layout_above="@id/textView2" android:layout_alignParentRight="true" />
				</RelativeLayout>
			</LinearLayout>
			<LinearLayout android:orientation="vertical" android:background="@drawable/ly_bord_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
				<RelativeLayout android:background="#ffedebec" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="20.0dip">
					<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff454344" android:id="@id/text_02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/Typeinhidinghelp" android:layout_below="@id/text_01" android:layout_alignParentRight="true" />
					<CheckBox android:textColor="#ff454545" android:layout_gravity="right" android:id="@id/check_01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/activatean" android:layout_below="@id/text_02" android:layout_alignRight="@id/text_02" android:layout_alignParentLeft="true" />
					<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#fff16136" android:id="@id/text_01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/Typeinhiding" android:layout_above="@id/textView2" android:layout_alignParentRight="true" />
				</RelativeLayout>
			</LinearLayout>
			<LinearLayout android:orientation="vertical" android:background="@drawable/ly_bord_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
				<RelativeLayout android:background="#ffedebec" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="20.0dip">
					<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff454344" android:id="@id/text_des_add" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/AutomaticallyAddDes" android:layout_below="@id/text_add_title" android:layout_alignParentRight="true" />
					<CheckBox android:textColor="#ff454545" android:layout_gravity="right" android:id="@id/check_04" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/activatean" android:layout_below="@id/text_des_add" android:layout_alignRight="@id/text_des_add" android:layout_alignParentLeft="true" />
					<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#fff16136" android:id="@id/text_add_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/AutomaticallyAdd" android:layout_alignParentRight="true" />
				</RelativeLayout>
			</LinearLayout>
			<LinearLayout android:orientation="vertical" android:background="@drawable/ly_bord_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
				<RelativeLayout android:background="#ffedebec" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="20.0dip">
					<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff454344" android:id="@id/text_des_shamsi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/ShamsiClenderhelp" android:layout_below="@id/text_shamsi_title" android:layout_alignParentRight="true" />
					<CheckBox android:textColor="#ff454545" android:layout_gravity="right" android:id="@id/check_02" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/activatean" android:layout_below="@id/text_des_shamsi" android:layout_alignRight="@id/text_des_shamsi" android:layout_alignParentLeft="true" />
					<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#fff16136" android:id="@id/text_shamsi_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/ShamsiClender" android:layout_alignParentRight="true" />
				</RelativeLayout>
			</LinearLayout>
			<LinearLayout android:orientation="vertical" android:background="@drawable/ly_bord_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
				<RelativeLayout android:background="#ffedebec" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="20.0dip">
					<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff454344" android:id="@id/text_des_timeago" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/ShamsiClenderhelp" android:layout_below="@id/text_shamsi_time_ago_title" android:layout_alignParentRight="true" />
					<CheckBox android:textColor="#ff454545" android:layout_gravity="right" android:id="@id/check_03" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/activatean" android:layout_below="@id/text_des_timeago" android:layout_alignRight="@id/text_des_timeago" android:layout_alignParentLeft="true" />
					<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#fff16136" android:id="@id/text_shamsi_time_ago_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/ShamsiClender" android:layout_alignParentRight="true" />
				</RelativeLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>
